Prettied up the home page. Got rid of blue and orange links. Fixed spacing. Normalized "See more" links, folded them in pull-right divs, etc.

--- a/app/assets/stylesheets/_mixins.css.sass
+++ b/app/assets/stylesheets/_mixins.css.sass
@@ -364,6 +364,7 @@ $blue-opaque: rgba(0,109,204,.8)
 $red: #DA4f49
 $red-opaque: rgba(218,79,73,.8)
 $light-gray: #ccc
+$light-black: rgb(51,51,51)
 $dark-gray: rgb(146, 146, 146)
 $offwhite: #f1f1f1
 $white-opaque: rgba(255,255,255,.3)
