--- a/app/assets/stylesheets/home.css.sass
+++ b/app/assets/stylesheets/home.css.sass
@@ -9,8 +9,8 @@
     color: $orange
 
   .home-featured-item
-    border: 1px solid $light-gray
-    padding: $baseline
+    border: none
+    padding: none
     margin-bottom: $baseline * 2
     @include boxsizing
     @include primary-font
@@ -47,6 +47,7 @@
       padding-left: 10px
       @include boxsizing
       h3
+        color: $light-black
         margin: 0px
 
   .home-featured-item-btn
