--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -369,9 +369,9 @@ form
   color: $orange
 
 .black-link
-  color: black
+  color: $light-black
   &:hover
-    color: black
+    color: $light-black
 
 .orange-link
   color: $orange
